# engram

./: .gitignore  LICENSE  README.md  engram_config.example.yaml  pyproject.toml  requirements.txt
.claude/: launch.json
engram/: __init__.py
engram/dashboard/: __init__.py  server.py
engram/export/: converters.py
engram/ingest/: __init__.py  cleaner.py  dedup.py  extractors.py  ics.py  metadata.py  redactor.py  watcher.py
engram/memory/: __init__.py  calendar_extractor.py  communities.py  compression.py  context.py  contradictions.py  council.py  decay.py  health.py  migration.py  open_questions.py  priming.py  proposals.py  reconsolidation.py  ris.py  routing.py  salience.py  schemas.py  session_harvester.py  signal_extractor.py  sleep_cycle.py  source_credibility.py  synthesis.py  team.py  tiers.py  tone_extractor.py
engram/retrieval/: __init__.py  config.py  curator.py  domain_bundles.py  graph.py  keyword.py  pipeline.py  tokenizer.py  wiki.py
engram/wiki/: __init__.py
engram/wiki/scripts/: convert-vtt-to-md.py  do_wiki_writes.py  sync_and_ingest.sh  wiki_batch_write.py
examples/: basic_retrieval.py
scripts/: archive-memory-entities.py  backfill_rename.py  bootstrap-tone-of-voice.py  check-no-pii.py  dedup-proposals.py  engram-init.sh  extract-deadlines.py  install-pii-guard.sh  migrate-old-tomtom.sh  prune-stale-graph.py  run-dream-cycle.py  scrub_patterns.example.txt
tests/: test_active_filter.py  test_chat_pipeline.py  test_ics.py  test_rejected_claims.py
